Upgrade to Java 25 and apply modern language features
Agent-Logs-Url: https://github.com/SaschaPros/SmartHomeServer/sessions/fc3ad7a4-3f41-47fe-85f5-35858fa06ff6

Co-authored-by: SaschaPros <143412057+SaschaPros@users.noreply.github.com>